Pas grand chose de plus

--- a/pfc.html
+++ b/pfc.html
@@ -19,9 +19,9 @@
 <html>
     <body>
         <div class="container">
-            <button class="choices" type="submit">Ciseau</button>
-            <button class="choices" type="submit">Pierre</button>
-            <button class="choices" type="submit">Feuille</button>
+            <button class="choices" onclick="myFunction(this)" id="Ciseau">Ciseau</button>
+            <button class="choices" onclick="myFunction(this)" id="Pierre">Pierre</button>
+            <button class="choices" onclick="myFunction(this)" id="Feuille">Feuille</button>
         </div>
     </body>
     <script src="pfc.js"></script>
