made most of the javascript code

--- a/pfc.html
+++ b/pfc.html
@@ -14,6 +14,16 @@
             height: all;
             width: 300px;
         }
+        .annonce {
+            padding-top: 250px;
+        }
+        .scoreJoueur {
+            position: absolute;
+        }
+        .scoreIA {
+            position: absolute;
+            padding-left: 80px;
+        }
     </style>
 </header>
 <html>
@@ -23,6 +33,9 @@
             <button class="choices" onclick="myFunction(this)" id="Pierre">Pierre</button>
             <button class="choices" onclick="myFunction(this)" id="Feuille">Feuille</button>
         </div>
+        <div class="annonce">Yo!</div>
+        <div class="scoreJoueur">Joueur: 0</div>
+        <div class="scoreIA">IA: 0</div>
     </body>
     <script src="pfc.js"></script>
 </html>
